# mailmon

./: .env.example  README.md  mise.toml  pyproject.toml
src/mailmon/: cmd.py  config.py  llm.py  mailbox.py  planner.py
src/mailmon/mailbox/: __init__.py  jmap.py  models.py
