[project]
name = "mailmon"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
  "jmapc>=0.2.23",
  "python-dotenv>=1.2.1",
]

[project.scripts]
mailmon = "mailmon.cmd:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mailmon"]
